# curso_fastapi_zero

./: README.md  pyproject.toml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: b01778bc9ede_create_users_table.py  cd4d55c543f4_criando_users_table.py  e9a27a920970_update_users_table_with_updated_at.py
notes/: 1_configuration.md  2_foundationsWeb.md  3_crudRoutes.md  4_sqlAlchemy_alembic.md  5_integratingDatabase.md  6_authentication_autorization.md  7_refactoringTheStructure.md  8_makingARobustAuth.md
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
