[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Bernardo Andrade <bernardo.andrade@levty.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
fastapi = {extras = ["standard"], version = "^0.112.2"}
gh = "^0.0.4"
httpx = "^0.27.2"
sqlalchemy = "^2.0.34"
pydantic-settings = "^2.5.2"
alembic = "^1.13.2"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
python-multipart = "^0.0.9"
pyjwt = "^2.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s --cov=fast_zero -vv'
post_test = 'coverage html'
lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
